Fix style on mobile

--- a/style.css
+++ b/style.css
@@ -28,3 +28,6 @@ h1 {
 #back {
     float: left;
 }
+#report-title {
+    margin-top: 2.5rem;
+}
